    search path are looked up is probably going to be changed in the
    next Automake release (1.13).

* Warnings and deprecations:

  - Automake now issues a warning (in the 'portability' category) if
    'configure.in' is used instead of 'configure.ac' as the Autoconf
    input file.  Such a warning will also be present in the next
    Autoconf version (2.70).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.12.1:

* New supported languages:

  - Support for Objective C++ has been added; it should work similarly to
    the support for Objective C.

* Deprecated obsolescent features:

  - Use of the long-deprecated two- and three-arguments invocation forms
    of the AM_INIT_AUTOMAKE macro now elicits a warning in the 'obsolete'
    category.  Starting from the next major Automake release (1.13), such
    usages won't be allowed anymore.

  - Support for the "Cygnus-style" trees (enabled by the 'cygnus' option) is
    now deprecated (its use triggers a warning in the 'obsolete' category).
    It will be removed in the next major Automake release (1.13).

  - The long-obsolete (since 1.10) automake-provided $(mkdir_p) make
    variable, @mkdir_p@ configure-time substitution and AM_PROG_MKDIR
    m4 macro are deprecated, eliciting a warning in the 'obsolete'
    category.  They will be removed in the next major version (1.13).

* Miscellaneous changes:

  - The Automake test cases now require a proper POSIX-conforming shell.
    Older non-POSIX Bourne shells (like Solaris 10 /bin/sh) won't be
    accepted anymore.  In most cases, the user shouldn't have to specify
    such POSIX shell explicitly, since it will be looked up at configure
    time.  Still, when this lookup fails, or when the user wants to
    override its conclusion, the variable 'AM_TEST_RUNNER_SHELL' can be
    used (pointing to the shell that will be used to run the Automake
    test cases).

Bugs fixed in 1.12.1:

* Bugs introduced by 1.12:
